deployments/url-shorten/url-shorten/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: url-shorten
    env: canary
  name: url-shorten-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      run: url-shorten
      env: canary
  template:
    metadata:
      labels:
        run: url-shorten
        env: canary
    spec:
      containers:
        - image: url-shorten-canary:latest
          name: url-shorten-canary
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 0
