deployments/url-shorten/url-shorten/deployment-production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: url-shorten
  name: url-shorten-production
spec:
  replicas: 3
  selector:
    matchLabels:
      run: url-shorten
  template:
    metadata:
      labels:
        run: url-shorten
    spec:
      containers:
        - image: url-shorten-production:latest
          name: url-shorten-production
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 0
