deployments/url-shorten/url-shorten/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: url-shorten
  name: url-shorten
  namespace: default
spec:
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    run: url-shorten
  sessionAffinity: None
  type: ClusterIP
